# DSR-AI

./: .gitignore  AGENTS.md  ARCHITECTURE_DECISION.md  BACKEND_CHANGES.md  CLAUDE.md  COMBOBOX_FIX.md  COST_OPTIMIZATION_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  FASE_1_COMPLETE.md  FRONTEND_CHANGES.md  FRONTEND_PROGRESS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_STATUS.txt  INFRASTRUCTURE_SUMMARY.md  MIGRATION_PLAN.md  PROJECT_DOCUMENTATION.md  QUICK_FIX_LOCATION_ERROR.md  SETUP.md  SYSTEM_OVERVIEW.md  SYSTEM_OVERVIEW_EXPORT.md  WIZARD_FIX.md  WIZARD_REFACTOR_COMPLETE.md  amplify.yml  intake-worker-hardening-plan.md  plan.md
_docs/: AGENT-ANALYSIS-DEEP-DIVE.md  AGENT-SIMPLIFICATION-PROPOSAL.md  CORE-STANDARDIZATION-PLAN.md  FRONTEND-MIGRATION-COMPLETE.md  IMPLEMENTATION-COMPLETE.md  Open Opportunities.xlsx  PROMPT-V2-COMPARISON.md  PROMPT-V3-ANALYSIS.md  QUESTIONNAIRE-GAPS-ANALYSIS.md  REBRANDING-CHANGES-LOG.md  REBRANDING-PLAN.md  SDS-DOCUMENT-INSIGHTS-IMPLEMENTATION-PLAN.md  SIMPLIFICATION-MIGRATION.md  SPEC-REFOCUS-2025.md  UI-UX-IMPROVEMENTS.md  (+10 more)
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  SECTOR_MIGRATION.md  TEMPLATE_MIGRATION_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20241104_1400-c1d2e3f4g5h6_add_company_location.py  20251031_0100-a1b2c3d4e5f6_add_template_system.py  20251031_0102-b2c3d4e5f6g7_seed_initial_templates.py  20251106_0740-d5e6f7g8h9i0_add_sector_to_company.py  20251114_0907_add_project_lifecycle_archiving.py  20251204_add_user_role.py  20251230_add_organizations.py  20260117_0018-0147eedda887_add_location_contacts.py  20260119_1100-add_company_location_lock_fields.py  20260121_1200-add_archive_fields.py  20260123_1200-add_intake_backend.py  20260130_1200-add_incoming_materials.py  20260202_1200-add_feedback.py  20260203_1200-add_processing_leases.py  20260205_1200-add_feedback_attachments.py  20260206_1200-add_organization_lifecycle_fields.py  20260207_1200-add_organization_purge_manifest.py  20260210_1200-add_bulk_import.py  20260218_1200-add_proposal_ratings.py  20260226_1300-add_company_contacts.py  20260227_1200-drop_company_legacy_contact_columns.py
backend/app/: main.py
backend/app/agents/: __init__.py  bulk_import_extraction_agent.py  document_analysis_agent.py  image_analysis_agent.py  notes_analysis_agent.py  proposal_agent.py
backend/app/api/: dependencies.py
backend/app/api/v1/: admin_proposal_ratings.py  admin_users.py  auth.py  bulk_import.py  companies.py  feedback.py  files.py  health.py  intake.py  organizations.py  project_data.py  projects.py  proposals.py
backend/app/authz/: __init__.py  policies.py
backend/app/core/: __init__.py  auth_backend.py  auth_db.py  config.py  database.py  fastapi_users_instance.py  startup_checks.py  user_manager.py
backend/app/models/: __init__.py  base.py  bulk_import.py  bulk_import_ai_output.py  bulk_import_output.py  company.py  company_contact.py  document_analysis_output.py  external_opportunity_report.py  feedback.py  feedback_attachment.py  file.py  image_analysis_output.py  incoming_material.py  intake_note.py  intake_suggestion.py  intake_unmapped_note.py  location.py  location_contact.py  notes_analysis_output.py  organization.py  organization_purge_manifest.py  project.py  project_input.py  proposal.py  proposal_output.py  proposal_rating.py  timeline.py  user.py
backend/app/prompts/: bulk-import-extraction.md  document-analysis.md  dsr-business-opportunity.v2.md  dsr-bussiness-opportunity.v2.md  image-analysis.md  notes-analysis.md  prompt-for-proposal.md  voice-interview-extraction.md  waste-upcycling-report.v1.md  waste-upcycling-report.v2-concise.md  waste-upcycling-report.v2.md  waste-upcycling-report.v3.md
backend/app/schemas/: __init__.py  admin_user_transfer.py  bulk_import.py  common.py  company.py  company_contact.py  feedback.py  file.py  incoming_material.py  intake.py  location.py  location_contact.py  org_user.py  organization.py  project.py  project_data.py  proposal.py  proposal_rating.py  template.py  timeline.py  user_fastapi.py
backend/app/services/: __init__.py  admin_user_transfer_service.py  bulk_import_ai_extractor.py  bulk_import_service.py  cache_service.py  document_processor.py  document_text_extractor.py  email_service.py  intake_document_pipeline.py  intake_field_catalog.py  intake_ingestion_service.py  intake_service.py  organization_lifecycle_service.py  project_data_service.py  proposal_service.py  s3_service.py  storage_delete_service.py  timeline_service.py
backend/app/templates/: __init__.py  assessment_questionnaire.py  helpers.py  registry.py  schemas.py
backend/app/utils/: purge_utils.py
backend/app/visualization/: modern_charts.py  pdf_generator.py  pdf_sections.py  pdf_styles.py  pdf_templates.py  simple_process_diagram.py
backend/docs/: BUGFIX_IMPORT_ERROR.md  DAY_4_INTEGRATION_COMPLETE.md  OIL_GAS_FIELD_IDS_CHECK.md  OIL_GAS_TEMPLATE_SYNC.md  TEMPLATE_SYSTEM_SIMPLIFIED.md
backend/docs/plans/: jazzy-moseying-hejlsberg-agent-a310b9a.md  jazzy-moseying-hejlsberg.md
backend/scripts/: bulk_import_worker.py  cleanup_orphaned_storage.py  healthcheck_bulk_import_worker.py  healthcheck_intake_worker.py  intake_ingestion_worker.py  migrate_orphaned_projects.py  verify_company_sector.py
backend/tests/: conftest.py  test_admin_users_transfer.py  test_archiving.py  test_auth.py  test_bulk_import.py  test_company_contacts.py  test_company_location_permissions.py  test_crud_companies_locations.py  test_feedback.py  test_feedback_attachments.py  test_feedback_delete.py  test_files.py  test_incoming_materials.py  test_intake.py  test_intelligent_case_filter_v2.py  test_location_contacts.py  test_multi_tenant.py  test_organizations.py  test_organizations_lifecycle.py  test_pdf_sections.py  test_projects.py  test_proposal_ratings.py  test_s3_service.py  test_storage_delete_service.py  test_team_members_permissions.py  test_user_manager_security.py  test_v1_improvements.py  test_voice_interviews.py
(+536 files in other folders)
