[project]
name = "h2o-allegiant-backend"
version = "1.0.0"
description = "H2O Allegiant - AI-powered water treatment engineering platform backend"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "H2O Allegiant Team" }
]

dependencies = [
    # FastAPI Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    
    # Database
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    
    # Redis
    "redis>=5.0.0",
    "aioredis>=2.0.1",
    
    # Security
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",  # Fix bcrypt version compatibility
    "python-jose[cryptography]>=3.3.0",
    "PyJWT>=2.8.0",
    
    # AI & LLM
    "openai>=1.35.0",
    "pydantic-ai>=0.0.14",
    
    # Document Processing
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "PyPDF2>=3.0.0",
    "docling>=2.0.0",
    
    # PDF Generation
    "reportlab>=4.2.0",
    "weasyprint>=60.0",
    "jinja2>=3.1.4",
    
    # Visualization
    "matplotlib>=3.8.0",
    "plotly>=5.22.0",
    "numpy>=1.26.0",
    
    # AWS
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",
    
    # HTTP & Utils
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.3",
    "pyright>=1.1.4",
    "ipython>=8.24.0",
]

  [tool.ruff]
  line-length = 100
  target-version = "py311"
  exclude = [".venv", "__pycache__", "*.egg-info", ".git", "dist", "build"]

  [tool.ruff.lint]
  # Selecciona reglas de linting
  select = [
      "E",      # pycodestyle errors
      "F",      # Pyflakes
      "I",      # isort (import sorting)
      "N",      # pep8-naming
      "W",      # pycodestyle warnings
      "UP",     # pyupgrade
      "B",      # flake8-bugbear (bugs comunes)
      "PERF",   # Perflint (optimizaciones)
      "SIM",    # flake8-simplify (código más simple)
  ]
  ignore = [
      # Ignora reglas específicas si las necesitas
      "E501",   # Line too long (lo maneja ruff format)
      "N999",   # Invalid module name (si tienes nombres especiales)
  ]
  fixable = ["ALL"]

  [tool.ruff.format]
  # Configuración de formateo
  quote-style = "double"
  indent-style = "space"
  line-ending = "auto"

  # ============================================================================
  # PYRIGHT - Type Checking (reemplaza Mypy - 3-5x más rápido)
  # ============================================================================
  [tool.pyright]
  pythonVersion = "3.11"
  typeCheckingMode = "standard"  # "basic", "standard", o "strict"
  reportUnknownVariableType = "warning"
  reportUnknownMemberType = "warning"
  reportMissingTypeStubs = "warning"
  reportPrivateUsage = "warning"
  venvPath = "."
  venv = ".venv"
  exclude = [".venv", "__pycache__", "build", "dist"]

  # ============================================================================
  # PYTEST - Testing
  # ============================================================================
  [tool.pytest.ini_options]
  testpaths = ["tests"]
  python_files = ["test_*.py", "*_test.py"]
  addopts = [
      "--strict-markers",
      "-ra",
      "--tb=short",
  ]
  asyncio_mode = "auto"  # Para pytest-asyncio

  # ============================================================================
  # Otros (opcional)
  # ============================================================================
  [tool.hatch.build.targets.wheel]
  packages = ["src/h2o_allegiant_backend"]
