[project]
name = "h2o-allegiant-backend"
version = "1.0.0"
description = "H2O Allegiant - AI-powered water treatment engineering platform backend"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "H2O Allegiant Team" }
]

dependencies = [
    # FastAPI Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    
    # Database
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    
    # Redis
    "redis>=5.0.0",
    "aioredis>=2.0.1",
    
    # Security
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",  # Fix bcrypt version compatibility
    "python-jose[cryptography]>=3.3.0",
    "PyJWT>=2.8.0",
    "fastapi-users>=12.1.0",
    "fastapi-users-db-sqlalchemy>=6.0.0",
    
    # AI & LLM
    "openai>=1.35.0",
    "pydantic-ai-slim[openai]>=1.0.0",
    
    # Document Processing
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "PyPDF2>=3.0.0",
    "markdown>=3.8.0",
    "docling>=2.0.0",
    
    # PDF Generation
    "reportlab>=4.2.0",
    "weasyprint>=60.0",
    "jinja2>=3.1.4",
    
    # Visualization
    "matplotlib>=3.8.0",
    "plotly>=5.22.0",
    "numpy>=1.26.0",
    
    # AWS
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",
    
    # HTTP & Utils
    "httpx>=0.27.0",
    "structlog>=25.0.0",
    "slowapi>=0.1.9",
    "aiofiles>=24.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    
    # Email
    "aiosmtplib>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.0",
    "ty>=0.0.12",
    "ipython>=8.24.0",
]

  [tool.ruff]
  target-version = "py311"
  line-length = 100
  extend-exclude = ["alembic"]

  [tool.ruff.lint]
  select = [
      # Errores basicos
      "E",      # pycodestyle errors
      "F",      # Pyflakes
      "W",      # pycodestyle warnings
      "I",      # isort
      
      # Modernizacion
      "UP",     # pyupgrade
      
      # Bugs y simplificacion
      "B",      # flake8-bugbear
      "SIM",    # flake8-simplify
      "PERF",   # Perflint
      
      # FastAPI/Async
      "ASYNC",  # async best practices
      "FAST",   # FastAPI-specific rules
      
      # Calidad general
      "RUF",    # Ruff-specific
      "C4",     # flake8-comprehensions
      "PTH",    # pathlib (moderniza os.path)
  ]
  ignore = [
      "E501",   # Line too long (formatter handles)
      "B008",   # FastAPI Depends() false positive
      "E402",   # Dynamic imports ok
      "RUF001", # Ambiguous unicode (en-dash in test data is fine)
      "RUF003", # Ambiguous unicode in comments
      "FAST003", # False positive: ProjectDep consumes path params internally
  ]
  fixable = ["ALL"]

  [tool.ruff.lint.per-file-ignores]
  "__init__.py" = ["F401"]
  "tests/**" = ["S101", "B011"]
  "alembic/**" = ["E402", "F401"]

  [tool.ruff.format]
  quote-style = "double"
  indent-style = "space"
  docstring-code-format = true

  # ============================================================================
  # TY - Type Checking (Astral, 10-100x faster than Pyright/Mypy)
  # ============================================================================
  [tool.ty]
  environment.python-version = "3.11"

  [tool.ty.src]
  respect-ignore-files = true
  exclude = ["alembic"]

  [tool.ty.rules]
  # Ignore unresolved imports (deps are in Docker, not in local venv)
  unresolved-import = "ignore"

  [[tool.ty.overrides]]
  include = ["tests/**"]
  [tool.ty.overrides.rules]
  possibly-unresolved-reference = "ignore"
  unresolved-import = "ignore"

  # ============================================================================
  # PYTEST - Testing
  # ============================================================================
  [tool.pytest.ini_options]
  testpaths = ["tests"]
  python_files = ["test_*.py", "*_test.py"]
  pythonpath = ["."]
  addopts = [
      "--strict-markers",
      "-ra",
      "--tb=short",
  ]
  asyncio_mode = "auto"  # Para pytest-asyncio

  # ============================================================================
  # Otros (opcional)
  # ============================================================================
  [tool.hatch.build.targets.wheel]
  packages = ["src/h2o_allegiant_backend"]
